--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ moisturizing creams, hand and foot creams, skin brightening creams, anti-aging c
         <div class="contact-form">
             <form id="contact-form">
                 <input type="text" id="name" name="name" placeholder="Your name" required>
-                <input type="number" id="phone" name="phone" placeholder="Your phone number">
+                <input type="number" id="tel" name="phone number" placeholder="Your phone number">
                 <input type="email" id="email" name="email" placeholder="Your Email" required>
                 <textarea id="message" name="message" placeholder="How can i help you?" required></textarea>
                 <button id="send-button" class="submit">Send Message</button>
